--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
     "realm-web": "^1.0.0",
     "validator": "^13.1.1"
